# clang-ast-export

./: README.md
scripts/: mac-bootstrap.sh  win-bootstrap.bat  win-command-prompt.bat  win-local-config-template.bat
source/: CMakeLists.txt  main.cpp
source/ast_export/: AstExportAstConsumer.cpp  AstExportAstConsumer.h  AstExportAstFrontendAction.cpp  AstExportAstFrontendAction.h  AstExportRecursiveAstVisitor.cpp  AstExportRecursiveAstVisitor.h  KvltConsumerJsonWriter.cpp  KvltConsumerJsonWriter.h  KvltKvList.cpp  KvltKvList.h  KvltKvListValue.cpp  KvltKvListValue.h  KvltList.cpp  KvltList.h  KvltRoot.cpp  KvltRoot.h  KvltStream.h
source/clang_ast_export/: AstExportAstConsumer.cpp  AstExportAstConsumer.h  AstExportAstFrontendAction.h  AstExportRecursiveAstVisitor.cpp  AstExportRecursiveAstVisitor.h  KvltConsumer.h  KvltConsumerJsonWriter.cpp  KvltConsumerJsonWriter.h  KvltKvList.cpp  KvltKvList.h  KvltKvListValue.cpp  KvltKvListValue.h  KvltList.cpp  KvltList.h  KvltRoot.h  KvltStream.cpp  KvltStream.h
source/main/: clang_ast_export_main.cpp
test/: clang_ast_export_exe_test.py  test_decl_input.cc  test_decl_result.txt
